--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   google_fonts: ^6.1.0
+  http: ^1.1.2
   intl: any
 
 dev_dependencies:
